# overkill_nvim

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: security-audit.yml  testing.yml
neovim/: Cargo.toml
neovim-sys/: Cargo.toml  build.rs
neovim-sys/src/: api.rs  globals.rs  lib.rs  option.rs  types.rs  typval.rs
neovim-sys/src/api/: buffer.rs  helpers.rs  nvim.rs  vim.rs
neovim-sys/src/lua/: executor.rs
neovim/src/: api.rs  eval.rs  key_code.rs  lib.rs  lua_test.rs  option.rs  option_defs.rs  typval.rs
neovim/src/api/: array.rs  buffer.rs  dictionary.rs  error.rs  mode.rs  nstring.rs  object.rs  rust_object.rs  string.rs  vim.rs
neovim/src/option/: buf.rs
neovim/src/option_defs/: buf_option.rs  global_option.rs
neovim_sys/: Cargo.toml
neovim_sys/src/: autocmd.rs  buffer_defs.rs  getchar.rs  lib.rs  types.rs  vim.rs
neovim_sys/src/api/: nvim.rs  private.rs
nvim-api/: Cargo.toml
nvim-api-rs/: Cargo.toml
nvim-api-rs/src/: key_code.rs  lib.rs  lua_test.rs
nvim-api-rs/src/api/: buffer.rs  error.rs  rust_object.rs  vim.rs
nvim-api-rs/src/option/: color_column_value.rs  conceal_level_value.rs  flags.rs
nvim-api-rust/: Cargo.toml
nvim-api-rust/src/: api.rs  key_code.rs  lib.rs  lua_test.rs  option.rs
nvim-api-rust/src/api/: buffer.rs  mode.rs  vim.rs
nvim-api-rust/src/option/: buf.rs  clipboard_settings.rs  complete_opt_settings.rs  global.rs  global_local.rs  inc_command_value.rs  list_char_settings.rs  short_mess_item.rs  show_tabline_value.rs  spell_lang_value.rs
nvim-api/src/: api.rs  lib.rs
nvim_api/: Cargo.toml
nvim_api/src/: api.rs  autocmd.rs  keymap.rs  lib.rs  lua_test.rs  nvim.rs
nvim_api/src/api/: keymap.rs  mode.rs  nvim.rs  rust_object.rs
nvim_api_test/: Cargo.toml
nvim_api_test/src/: lib.rs
nvim_test-proc_macro/: Cargo.toml
nvim_theemin/: Cargo.toml  README.md
nvim_theemin/src/: color.rs  groups.rs  highlight.rs  lib.rs  theme.rs
overkill-nvim/: Cargo.toml
overkill-nvim/src/: key_code.rs  lua_test.rs  option.rs
overkill-nvim/src/option/: clipboard_settings.rs  complete_opt_settings.rs  conceal_level_value.rs  list_char_settings.rs  show_tabline_value.rs  spell_lang_value.rs
overkill-nvim/src/option/flags/: char_flags.rs  string_flags.rs
overkill_nvim/: Cargo.toml
overkill_nvim/src/: key_code.rs  lib.rs  lua_test.rs  mapping.rs  mode.rs  option.rs
overkill_nvim/src/mapping/: map.rs  map_mode.rs  mapper.rs
overkill_nvim/src/option/: color_column_value.rs  conceal_level_value.rs  flags.rs  inc_command_value.rs  list_char_settings.rs  short_mess_item.rs  show_tabline_value.rs  sign_column_value.rs  spell_lang_value.rs
overkill_nvim/src/option/flags/: string_flags.rs
tests/: minimal_init.vim
tests/lua/: neovim_rs.lua
tests/plenary/: firsttry_spec.lua  nvim_api_spec.lua  overkill_spec.lua
turducken-nvim/: Cargo.toml
turducken-nvim/src/: key_code.rs  lib.rs  option.rs
(+66 files in other folders)
