[package]
name = "neovim"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# mlua = { version = "0.6", optional = true, features = ["lua51"] }
# hlua = { version = "0.4", optional = true }
approx = { version = "0.5", optional = true }
neovim-sys = { path = "../neovim-sys" }
thiserror = "1.0"

[features]
default = []
# lua_test = ["mlua"]
# lua_test = ["hlua"]
lua_test = ["approx"]
