[package]
name = "neovim"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = { version = "0.5", optional = true }
neovim-sys = { path = "../neovim-sys" }
thiserror = "1.0"

[features]
default = []
lua_test = ["approx"]
