[package]
name = "nvim_api"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = { version = "0.5", optional = true }
neovim_sys = { path = "../neovim_sys" }
nvim_api_test = { path = "../nvim_api_test" }
thiserror = "1.0"

[features]
default = []
lua_test = ["approx"]
