[package]
name = "overkill_nvim"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim_api = { path = "../nvim_api/" }
thiserror = "1.0"

[features]
default = []
lua_test = []
